utf-8 charset is not set for default HTML rendering #9697